k8s/catalog-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-data-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      micro: catalog-data
  template:
    metadata:
      labels:
        micro: catalog-data
    spec:
      containers:
        - name: catalogdata
          image: vineetkala11/catalog-data
          ports:
            - containerPort: 8000
