k8s/catalog-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      micro: catalog-service
  template:
    metadata:
      labels:
        micro: catalog-service
    spec:
      containers:
        - name: catalogservice
          image: vineetkala11/catalog-service
          ports:
            - containerPort: 8100
