k8s/catalog-data-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-data-service
spec:
  type: ClusterIP
  selector:
    micro: catalog-data
  ports:
    - port: 8000
      targetPort: 8000
