k8s/catalog-service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service-service
spec:
  type: ClusterIP
  selector:
    micro: catalog-service
  ports:
    - port: 8100
      targetPort: 8100
