k8s/eureka-server-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
spec:
  type: ClusterIP
  selector:
    micro: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
