k8s/gateway-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    micro: gateway
  ports:
    - port: 8084
      targetPort: 8084
