k8s/redis-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    cache: redis-cache
  ports:
    - port: 6379
      targetPort: 6379
