k8s/Ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubertenes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: eureka-server-service
              servicePort: 8761
          - path: /api/?(.*)
            backend:
              serviceName: gateway-service
              servicePort: 8084
          - path: /cts/?(.*)
            backend:
              serviceName: catalog-service-service
              servicePort: 8100
          - path: /data/?(.*)
            backend:
              serviceName: catalog-data-service
              servicePort: 8000
